// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table specialist {
  id int  [pk, unique, not null]
  surname varchar
  first_name varchar
  patronymic varchar
  speciality varchar

    indexes {
      surname
      speciality
  }
}

Table service {
  id int [pk, unique, not null]
  name varchar

  indexes {
      name [unique]
  }
}

Table price {
  id int [pk, unique, not null]
  service_fk int [ref: > service.id]
  price decimal
  begin_date datetime2
  end_date datetime2

  indexes {
      (service_fk, begin_date, end_date) [unique]
  }
}

Table specialist_service {
  id int [pk, unique, not null]
  specialist_fk int [ref: > specialist.id]
  service_fk int [ref: > service.id]

  indexes {
      (service_fk, specialist_fk) [unique]
  }
}

Table client {
  id int [pk, unique, not null]
  surname varchar
  first_name varchar
  patronymic varchar
  phone varchar

  indexes {
      surname [type: hash]
      phone [unique]
  }
}

Table visit {
  id int [pk, unique, not null]
  client_fk int [ref: > client.id]
  date datetime2
  purpose varchar
  comment varchar

  indexes {
      client_fk
  }
}

Table service_provided {
  id int [pk, unique, not null]
  service_fk int [ref: > service.id]
  visit_fk int [ref: > visit.id]
  date datetime2

  indexes {
      (visit_fk, service_fk)
  }
}

Table examination_result{
  id int [pk, unique, not null]
  service_provided_fk int [ref: > service_provided.id]
  date datetime2
  result varchar

  indexes {
      service_provided_fk
  }
}

Table visit_specialist{
  id int [pk, unique, not null]
  visit_fk int [ref: > visit.id]
  specialist_fk int [ref: > specialist.id]
  comment varchar

  indexes {
      (specialist_fk, visit_fk)
  }
}
